bin_PROGRAMS = tkt-send tkt-recv kt-add kt-split

tkt_send_SOURCES = \
	tkt_send.cpp \
	easylogging/easylogging++.h \
	optionparser/optionparser.h

tkt_recv_SOURCES = \
	tktrecv_common.cpp \
	tktrecv_main.cpp \
	tktrecv_server.cpp \
	credmgr.cpp \
	creds.cpp \
	tktrecv.h \
	credmgr.h \
	creds.h \
	easylogging/easylogging++.h \
	optionparser/optionparser.h

kt_add_SOURCES = \
	kt_add.cpp \
	kt.cpp \
	kt.h \
	easylogging/easylogging++.h \
	optionparser/optionparser.h

kt_split_SOURCES = \
	kt_split.cpp \
	kt.cpp \
	easylogging/easylogging++.h \
	optionparser/optionparser.h

